<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.idcos</groupId>
    <artifactId>guanbin</artifactId>
    <version>1.0.0</version>
    <packaging>war</packaging>

    <name>guanbin</name>
    <description>gf cloud platform</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.5.2.RELEASE</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <!--basic -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>

        <!--idcos -->
        <idcos.common.base.version>1.1.0-SNAPSHOT</idcos.common.base.version>
        <idcos.common.component.version>1.1.0-SNAPSHOT</idcos.common.component.version>
        <idcos.common.service.version>1.1.0-SNAPSHOT</idcos.common.service.version>
        <idcos.common.codegen.version>1.1.0-SNAPSHOT</idcos.common.codegen.version>
        <idcos.common.web.version>1.1.0-SNAPSHOT</idcos.common.web.version>

        <!--common util -->
        <fastjson.version>1.2.6</fastjson.version>
        <apache.commons.lang.version>3.3.2</apache.commons.lang.version>
        <apache.poi.version>3.11</apache.poi.version>
        <mysql.connector.version>5.1.34</mysql.connector.version>

        <start-class>com.idcos.Application</start-class>

    </properties>

    <dependencies>

        <!-- spring basic -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!--<dependency> -->
        <!--<groupId>org.springframework.boot</groupId> -->
        <!--<artifactId>spring-boot-starter-jetty</artifactId> -->
        <!--<scope>provided</scope> -->
        <!--</dependency> -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-freemarker</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail-api</artifactId>
            <version>1.4.7</version>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.5.1</version>
        </dependency>

        <!-- DB -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.connector.version}</version>
        </dependency>

        <!-- swagger -->
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.4.0</version>
        </dependency>


        <!-- idcos common -->
        <dependency>
            <groupId>com.idcos.common</groupId>
            <artifactId>common-base</artifactId>
            <version>${idcos.common.base.version}</version>
        </dependency>
        <dependency>
            <groupId>com.idcos.common</groupId>
            <artifactId>common-web</artifactId>
            <version>${idcos.common.web.version}</version>
        </dependency>
        <dependency>
            <groupId>com.idcos.common</groupId>
            <artifactId>common-component</artifactId>
            <version>${idcos.common.component.version}</version>
        </dependency>

        <dependency>
            <groupId>com.idcos.common</groupId>
            <artifactId>common-service</artifactId>
            <version>${idcos.common.service.version}</version>
        </dependency>
        <dependency>
            <groupId>com.idcos.common</groupId>
            <artifactId>common-codegen</artifactId>
            <version>${idcos.common.codegen.version}</version>
            <scope>provided</scope>
        </dependency>


        <!-- common util -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${apache.poi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache.commons.lang.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
        </dependency>

        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>2.3.0</version>
        </dependency>

        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
        </dependency>

        <!-- Apache POI -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.11</version>
        </dependency>
        <!-- excel操作 -->
        <dependency>
            <groupId>net.sourceforge.jexcelapi</groupId>
            <artifactId>jxl</artifactId>
            <version>2.6.12</version>
        </dependency>


        <!--SpringBoot Jdbc Starter-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>

        <!--数据库schema代码生成器 -->
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq-codegen</artifactId>
            <version>3.9.1</version>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <repositories>

                <repository>
                    <id>central</id>
                    <name>center Repositories</name>
                    <url>http://maven2.idcos.com:8081/repository/maven-public/</url>
                </repository>

                <repository>
                    <id>remote</id>
                    <name>remote center Repositories</name>
                    <url>http://repo1.maven.org/maven2</url>
                </repository>

            </repositories>

            <properties>
                <jar.scope>compile</jar.scope>
                <env.name>dev</env.name>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-codegen-maven</artifactId>
                        <version>3.9.1</version>
                        <!--不执行该插件-->
                        <executions>
                            <execution>
                                <id>jooq-code-generate</id>
                                <phase>none</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>local</id>
            <activation>
                <property>
                    <name>local</name>
                </property>
            </activation>

            <repositories>
                <repository>
                    <id>central</id>
                    <name>center Repositories</name>
                    <url>http://maven2.idcos.com:8081/repository/maven-public/</url>
                </repository>

                <repository>
                    <id>remote</id>
                    <name>remote center Repositories</name>
                    <url>http://repo1.maven.org/maven2</url>
                </repository>

            </repositories>

            <properties>
                <jar.scope>compile</jar.scope>
                <env.name>local</env.name>
            </properties>

        </profile>
        <profile>
            <id>pub</id>
            <activation>
                <property>
                    <name>pub</name>
                </property>
            </activation>

            <repositories>
                <repository>
                    <id>central</id>
                    <name>center Repositories</name>
                    <url>http://maven2.idcos.com:8081/repository/maven-public/</url>
                </repository>

                <repository>
                    <id>remote</id>
                    <name>remote center Repositories</name>
                    <url>http://repo1.maven.org/maven2</url>
                </repository>

            </repositories>

            <properties>
                <jar.scope>provided</jar.scope>
                <env.name>pub</env.name>
            </properties>

        </profile>
    </profiles>

    <build>
        <finalName>cloudres-1.0.0-SNAPSHOT</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal><!-- 类似执行mvn source:jar -->
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>1.3.2.RELEASE</version>
                <configuration>
                    <addResources>true</addResources>
                    <jvmArguments>
                        -Xms512m
                        -Xmx2048m
                        -XX:MaxPermSize=250m
                        -XX:ReservedCodeCacheSize=64m
                        -XX:+UseCodeCacheFlushing
                        -ea
                        -Dsun.io.useCanonCaches=false
                    </jvmArguments>
                </configuration>
                <dependencies>
                    <!--热部署用 -->
                    <dependency>
                        <groupId>org.springframework</groupId>
                        <artifactId>springloaded</artifactId>
                        <version>1.2.5.RELEASE</version>
                    </dependency>
                </dependencies>
            </plugin>
            <!--读取配置文件-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0-alpha-2</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>profiles/config.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--数据库代码生成的插件 -->
            <plugin>
                <!-- Specify the maven code generator plugin -->
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>3.9.1</version>
                <!-- The plugin should hook into the generate goal -->
                <executions>
                    <execution>
                        <id>jooq-code-generate</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- JDBC connection parameters -->
                    <jdbc>
                        <driver>${database.driver}</driver>
                        <url>${database.url}</url>
                        <user>${database.user}</user>
                        <password>${database.password}</password>
                    </jdbc>
                    <!-- Generator parameters -->
                    <generator>
                        <database>
                            <inputSchema>cloudres</inputSchema>
                            <name>org.jooq.util.mysql.MySQLDatabase</name>
                            <includes>
                                ${target.tables}
                            </includes>
                        </database>
                        <target>
                            <packageName>com.idcos.cloudres.dal.jooq</packageName>
                            <directory>src/main/java</directory>
                        </target>
                    </generator>
                </configuration>
            </plugin>

        </plugins>
    </build>


</project>
